[package]
name = "toms-data-onion"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.4"
ascii85 = "0.2"
block-modes = "0.4" 
byteorder = "1"
etherparse = "0.9"
generic-array = "0.14"